--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,9 +7,9 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-tantivy = "0.10.1"
-walkdir = "2.2.9"
-structopt = "0.2.18"
-serde = { version = "1.0.99", features = ["derive"] }
-toml = "0.5.1"
 failure = "0.1.5"
+glob = "0.3.0"
+serde = { version = "1.0.99", features = ["derive"] }
+structopt = "0.2.18"
+tantivy = "0.10.1"
+toml = "0.5.1"
