--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,13 @@
 [package]
 name = "local-search"
 version = "0.1.0"
-authors = ["Samuel Walladge"]
+authors = ["Samuel Walladge <samuel@swalladge.net>"]
+description = "Command line local plain text files indexer and searcher."
+readme = "README.md"
+keywords = ["cli", "search", "tantivy"]
+repository = "https://github.com/swalladge/local-search/"
+categories = ["command-line-utilities"]
+license = "MIT OR Apache-2.0"
 edition = "2018"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
